src/test/ui/issues/issue-34373.stderr
error[E0391]: cycle detected when processing `Foo::T`
  --> $DIR/issue-34373.rs:7:30
   |
LL | pub struct Foo<T = Box<Trait<DefaultFoo>>>;
   |                              ^^^^^^^^^^
   |
note: ...which requires processing `DefaultFoo`...
  --> $DIR/issue-34373.rs:8:19
   |
LL | type DefaultFoo = Foo;
   |                   ^^^
   = note: ...which again requires processing `Foo::T`, completing the cycle
note: cycle used when collecting item types in top-level module
  --> $DIR/issue-34373.rs:1:1
   |
LL | / #![allow(warnings)]
LL | |
LL | | trait Trait<T> {
LL | |     fn foo(_: T) {}
...  |
LL | | fn main() {
LL | | }
   | |_^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
